tests/fixtures/invalid/bool_bitand_list.py
# Cannot bitwise AND Bool and List[int]
x: bool = True & [1, 2, 3]
